feat(paper): add universal compatibility for Minecraft 1.20.x through 1.21.4
- Configure Gradle with targetJava = 17, --release 17, and paper-api 1.20.4-R0.1-SNAPSHOT baseline
- Update plugin.yml api-version to 1.20
- Migrate CommandService to LegacyPaperCommandManager<CommandSender> with dynamic NATIVE_BRIGADIER and ASYNCHRONOUS_COMPLETION registration
- Adapt VoiceCommands, AudioCommands, and SpeakerCommands to use CommandSender
- Add command execution unit tests and adapt SpeakerManagerTest for Java 17 compatibility
- Sync and archive OpenSpec change paper-universal-1-20-support